--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "node app.js",
+    "electron": "electron ."	
   },
   "author": "",
   "license": "ISC"
